--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -34,6 +34,28 @@ html {
   @media only screen and (max-width: $bp-medium) {
     font-size: 50%;
   }
+
+  @media only screen and (max-width: $bp-small) {
+    .header__logo {
+      margin-left: 5px;
+    }
+
+    .add__recipe, .check__bookmarks {
+      display: none;
+    }
+
+    .nav__btn {
+      padding: 5px;
+    }
+
+    .search__btn {
+      padding: 8px 20px 8px 8px;
+    }
+
+    .search__field {
+      width: 100px
+    }
+  }
 }
 
 body {
