--- a/src/sass/_base.scss
+++ b/src/sass/_base.scss
@@ -90,4 +90,9 @@ body {
     margin: 0;
     border-radius: 0;
   }
+
+
+  @media only screen and (max-width: $bp-small) {
+    overflow-x: auto;
+  }
 }
